@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "US113 - Consultar Rotas" {

    class RouteController <<RestController>> {
      + getRouteById(id: Long): Route
      + getRoutesFromAirport(iataCode: String): List<Route>
    }

    class RouteService <<Service>> {
      + getRouteById(id: Long): Route
      + getRoutesFromAirport(originCode: String): List<Route>
    }

    interface RouteRepository <<Repository>> {
      + findById(id: Long): Optional<Route>
      + findByOriginAirport(originAirport: Airport): List<Route>
    }

    interface AirportRepository <<Repository>> {
      + findById(iataCode: String): Optional<Airport>
    }

    class Route <<Entity>> {
      - id: Long
      - originAirport: Airport
      - destinationAirport: Airport
      - estimatedFlightTimeMinutes: Integer
      - minimumRange: Integer
      - minimumCapacity: Integer
      - status: RouteStatus
    }

    class Airport <<Entity>> {
      - iataCode: String
      - name: String
      - city: String
      - country: String
      - timezone: String
      - status: String
    }

    RouteController "1" --> "1" RouteService : uses >
    RouteService "1" --> "1" RouteRepository : uses >
    RouteService "1" --> "1" AirportRepository : uses >
    RouteRepository ..> Route : retrieves >
    AirportRepository ..> Airport : retrieves >
    Route "1" --> "1" Airport : origin >
    Route "1" --> "1" Airport : destination >
}
@enduml